devops/k8s_manifests/calendar-app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-backend
  namespace: calendar-app
  labels:
    app.kubernetes.io/name: calendar-backend
    app.kubernetes.io/part-of: calendar-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: calendar-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calendar-backend
        app.kubernetes.io/part-of: calendar-app
    spec:
      containers:
        - name: backend
          image: ghcr.io/sg6/argo-lab-calendar-app-backend:dev-0.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
