devops/k8s_manifests/calendar-app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-backend
  namespace: calendar-app
  labels:
    app.kubernetes.io/name: calendar-backend
    app.kubernetes.io/part-of: calendar-app
spec:
  selector:
    app.kubernetes.io/name: calendar-backend
  ports:
    - name: http
      port: 3000
      targetPort: http
