devops/k8s_manifests/calendar-app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-frontend
  namespace: calendar-app
  labels:
    app.kubernetes.io/name: calendar-frontend
    app.kubernetes.io/part-of: calendar-app
spec:
  selector:
    app.kubernetes.io/name: calendar-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
