devops/k8s_manifests/calendar-app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calendar-app
  namespace: calendar-app
spec:
  parentRefs:
    - name: calendar-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
        - path:
            type: PathPrefix
            value: /events
      backendRefs:
        - name: calendar-backend
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: calendar-frontend
          port: 80
