devops/k8s_manifests/calendar-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-app
  namespace: calendar-app
spec:
  ingressClassName: nginx
  rules:
    - host: calendar.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calendar-frontend
                port:
                  name: http
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: calendar-backend
                port:
                  name: http
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: calendar-backend
                port:
                  name: http
